--- a/Standcalendar.html
+++ b/Standcalendar.html
@@ -285,7 +285,7 @@
     "2025-07-06": { time: "9:00 AM - 5:00 PM", place: "IJ-Hallen NDSM-Plein 1 1033 WC Amsterdam-Noord", type: "normal" },
     "2025-07-13": { time: "10:00 AM - 4:00 PM", place: "Colectorsland Volmerlaan 12, 2288 GD Rijswijk", type: "anime" },
     "2025-07-19": { time: "9:00 AM - 5:00 PM", place: "IJ-Hallen NDSM-Plein 1 1033 WC Amsterdam-Noord", type: "normal" },
-    "2025-08-09": { time: "9:00 AM - 5:00 PM", place: "IJ-Hallen NDSM-Plein 1 1033 WC Amsterdam-Noord", type: "anime" },
+    "2025-08-09": { time: "9:00 AM - 5:00 PM", place: "IJ-Hallen NDSM-Plein 1 1033 WC Amsterdam-Noord", type: "normal" },
     "2025-08-10": { time: "9:00 AM - 5:00 PM", place: "IJ-Hallen NDSM-Plein 1 1033 WC Amsterdam-Noord", type: "normal" },
   };
 
