--- a/Contact.html
+++ b/Contact.html
@@ -196,7 +196,7 @@
   <img src="logoMarketMuse.png" alt="Market Muse Logo" />
   <nav>
     <ul>
-      <li><a href="index.html" aria-label="Home">Home</a></li>
+      <li><a href="home.html" aria-label="Home">Home</a></li>
       <li><a href="Standcalendar.html" aria-label="Stand Calendar">Stand Calendar</a></li>
       <li><a href="products.html" aria-label="Products">Products</a></li>
       <li><a href="Ouranimestand.html"> Anime Stand</a></li>
