--- a/products.html
+++ b/products.html
@@ -155,7 +155,7 @@
   <img src="logoMarketMuse.png" alt="Market Muse Logo" />
   <nav>
     <ul>
-      <li><a href="index.html">Home</a></li>
+      <li><a href="home.html>Home</a></li>
       <li><a href="Standcalendar.html">Stand Calendar</a></li>
       <li><a href="products.html">Products</a></li>
       <li><a href="Ouranimestand.html"> Anime Stand</a></li>
