--- a/products.html
+++ b/products.html
@@ -167,7 +167,7 @@
 <main>
   <h1>Our Products by Category</h1>
   <div class="category">
-   <h2>Jewelry</h2>
+   <h2>jewellery</h2>
   <div class="products-grid">
     <div class="product-card small-img">
       <img src="Ring.png" alt="Rings" />
