--- a/Standcalendar.html
+++ b/Standcalendar.html
@@ -287,6 +287,7 @@
     "2025-07-19": { time: "9:00 AM - 5:00 PM", place: "IJ-Hallen NDSM-Plein 1 1033 WC Amsterdam-Noord", type: "normal" },
     "2025-08-09": { time: "9:00 AM - 5:00 PM", place: "IJ-Hallen NDSM-Plein 1 1033 WC Amsterdam-Noord", type: "normal" },
     "2025-08-10": { time: "9:00 AM - 5:00 PM", place: "IJ-Hallen NDSM-Plein 1 1033 WC Amsterdam-Noord", type: "normal" },
+    "2025-08-10": { time: "9:00 AM - 5:00 PM", place: "Facts Flanders Expo maaltekouter 1 9051 Gent België", type: "anime" },
   };
 
   const calendarEl = document.getElementById('calendar');
