--- a/Standcalendar.html
+++ b/Standcalendar.html
@@ -289,6 +289,7 @@
     "2025-08-10": { time: "9:00 AM - 5:00 PM", place: "IJ-Hallen NDSM-Plein 1 1033 WC Amsterdam-Noord", type: "normal" },
     "2025-11-01": { time: "9:00 AM - 5:00 PM", place: "Facts Flanders Expo maaltekouter 1 9051 Gent Belgie", type: "anime" },
     "2025-11-02": { time: "9:00 AM - 5:00 PM", place: "Facts Flanders Expo maaltekouter 1 9051 Gent Belgie", type: "anime" },
+    "2025-30-08": { time: "9:00 AM - 5:00 PM", place: "Hendriks collectables Van Riemsdijkplein 60, 7606 JZ Almelo", type: "anime" },
   };
 
   const calendarEl = document.getElementById('calendar');
