--- a/Standcalendar.html
+++ b/Standcalendar.html
@@ -290,8 +290,8 @@
     "2025-11-01": { time: "9:00 AM - 5:00 PM", place: "Facts Flanders Expo maaltekouter 1 9051 Gent Belgie", type: "anime" },
     "2025-11-02": { time: "9:00 AM - 5:00 PM", place: "Facts Flanders Expo maaltekouter 1 9051 Gent Belgie", type: "anime" },
     "2025-08-30": { time: "9:00 AM - 5:00 PM", place: "Hendriks Collectables Topsportcentrum IISPA Van Riemsdijkplein 60, 7606 JZ Almelo", type: "anime" },
-    "2025-"11-10": { time: "9:00 AM - 5:00 PM", place: "Comic Con Holland Stelling 1, 2141 SB Vijfhuizen, Netherlands", type: "anime" },
-    "2025-"12-10": { time: "9:00 AM - 5:00 PM", place: "Comic Con Holland Stelling 1, 2141 SB Vijfhuizen, Netherlands", type: "anime" },
+    "2025-11-10": { time: "9:00 AM - 5:00 PM", place: "Comic Con Holland Stelling 1, 2141 SB Vijfhuizen, Netherlands", type: "anime" },
+    "2025-12-10": { time: "9:00 AM - 5:00 PM", place: "Comic Con Holland Stelling 1, 2141 SB Vijfhuizen, Netherlands", type: "anime" },    
   };
 
   const calendarEl = document.getElementById('calendar');
@@ -401,6 +401,7 @@
 
 </body>
 </html>
+
 
 
 
